review suggestions - refactoring
Signed-off-by: Usman Saleem <usman@usmans.info>